<resources>
    <string name="app_name">Заявки на монтаж</string>
    <string name="action_settings">Settings</string>
    <string name="add_request">Add request</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="request_text">Request text</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_request">Edit request</string>
    <string name="create_new_request">Create new request</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="main_settings">Main settings</string>
    <string name="operator_phone_number">Operator phone number</string>
    <string name="operator_phone_number_summary">Operator phone number to listen for requests by sms</string>
    <string name="comment">Comment</string>
    <string name="move_to_date">Move to date</string>
    <string name="request_completed">Request completed</string>
    <string name="request_denied">Request denied</string>
    <string name="request_moved">Request moved</string>
    <string name="close_request">Close request</string>
    <string name="sms_sent_success">SMS sent successfully</string>
    <string name="generic_failure">Generic failure</string>
    <string name="no_service">No service</string>
    <string name="null_message">No message</string>
    <string name="radio_off">Radio is off</string>
    <string name="sms_deliver_success">SMS delivered successfully</string>
    <string name="result_canceled">SMS result canceled</string>
    <string name="done">Done</string>
    <string name="denied">Denied</string>
    <string name="invalid_operator_number">Invalid operator number, please fix in settings!</string>
    <string name="dash">-</string>
    <string name="notify_on_sms">Notify on SMS</string>
    <string name="notify_with_sound">Ring on SMS</string>
    <string name="request_already_exists">Request with such ID already exists!</string>
</resources>
